TestCases/Errors/Haversine/observations/sst/aut_10_obs.spm
obs r16-c5 0.000231113540227344
obs r16-c6 0.000188615127581479
obs r17-c6 0.000146428609743151
obs r16-c7 0.00038692269208707
obs r17-c7 0.000305162524024724
obs r6-c15 0.00154385964912281
obs r6-c16 0.000675675675675676
obs r7-c16 1e-08
obs r10-c19 0.00936666666666667
obs r11-c19 0.0157729603729604
obs r12-c19 0.011
obs r10-c20 0.0100652173913043
error_value r16-c5 0.2
error_value r16-c6 0.2
error_value r17-c6 0.2
error_value r16-c7 0.2
error_value r17-c7 0.2
error_value r6-c15 0.2
error_value r6-c16 0.2
error_value r7-c16 0.2
error_value r10-c19 0.2
error_value r11-c19 0.2
error_value r12-c19 0.2
error_value r10-c20 0.2
